--- a/Capstone_Project_Streamlit/requirements.txt
+++ b/Capstone_Project_Streamlit/requirements.txt
@@ -1,16 +1,16 @@
-langchain==0.1.20
-langchain_community==0.0.38
-langchain_experimental==0.0.58
-langchain_google_genai==1.0.1
-openai==1.13.3
-pandas==2.0.3
-pdfminer==20191125
-pdfplumber==0.11.0
-pikepdf==8.15.1
-presidio_analyzer==2.2.354
-presidio_anonymizer==2.2.354
-PyPDF2==3.0.1
-python-dotenv==1.0.1
-reportlab==4.2.0
-streamlit==1.31.1
-tiktoken==0.7.0
+langchain
+langchain_community
+langchain_experimental
+langchain_google_genai
+openai
+pandas
+pdfminer
+pdfplumber
+pikepdf
+presidio_analyzer
+presidio_anonymizer
+PyPDF2
+python-dotenv
+reportlab
+streamlit
+tiktoken
